@@ -1,3 +1,8 @@
+2024-01-04  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-intro.el (ee-bol-skip-invisible, ee-eol-skip-invisible):
+	fixed some typos.
+
 2024-01-03  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-intro.el (ee-bol-skip-invisible, ee-eol-skip-invisible): new
